change in livedemo

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="project-title">Portfolio</div>
             <p>Built a Portfolio website.</p>
             <div class="project-links">
-              <a href="https://samirpudasaini.com" target="_blank" rel="noopener noreferrer"
+              <a href="https://samirpudasaini.site" target="_blank" rel="noopener noreferrer"
                 class="project-btn demo-btn">
                 <span>Live Demo</span>
               </a>
