change in Resume↓

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>Web Developer & AI/ML Enthusiast<br>Building clean, thoughtful digital experiences</p>
 
         <div class="buttons">
-          <a href="images/cv/Samir Pudasaini CV.pdf" class="button" download="Samir Pudasaini CV.pdf">
+          <a href="images/cv/Samir Pudasaini CV.pdf .pdf" class="button" download="Samir Pudasaini CV.pdf">
             Resume ↓
           </a>
           <a href="#contact" class="button">Contact Me</a>
