message-box changes

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               timestamp: Date.now()
             })
             .then(() => {
-            messageDiv.textContent = "Message sent successfully!";
+            messageDiv.textContent = "Thank You! For your Message I will get back to you as soon as possible.";
             form.reset();
             })
             .catch((error) => {
