download of resume

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
 
-    <a href="#" class="cta-button" download="Samir Pudasaini CV.pdf">Resume ↓</a>
+    <a href="images/Samir Pudasaini CV.pdf .pdf" class="cta-button" download="Samir Pudasaini CV.pdf">Resume ↓</a>
   </header>
 
   <!-- Mobile Bottom Navigation -->
